# Excel-converter

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  UI_REBUILD_PLAN.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demo/: DEMO_WALKTHROUGH.md  create_demo_excel.py
demo/offerten_architekturen/: 2.xlsx  3.xlsx  4.xlsx  5.xlsx  6.xlsx  7.xlsx  8.xlsx  9.xlsx
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  main.tsx  types.ts
frontend/src/components/: ExportFab.tsx  HeaderCard.tsx  Icon.tsx  ImportCard.tsx  InfoCard.tsx  MarketCard.tsx  OverviewScreen.tsx  ProductTable.tsx  SettingsCard.tsx
frontend/src/styles/: app.css
scrapling_test/: app.py  debug_galaxus.py  requirements.txt  scraper.py
src/offerten_converter/: main.py
src/offerten_converter/api/: __init__.py  file_store.py  mappers.py  routes.py  schemas.py  server.py
src/offerten_converter/application/: calculate_prices.py  export_quotation.py  extract_products.py  filter_products.py  manage_profiles.py  ports.py  sanitize_data.py
src/offerten_converter/domain/: entities.py  pricing.py
src/offerten_converter/ui/: state.py  (+4 more)
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_api_routes.py  test_calculate_prices.py  test_excel_reader.py  test_export_quotation.py  test_extract_products.py  test_manage_profiles.py
tests/unit/: test_api_contracts.py  test_entities.py  test_filter_products.py  test_json_parsing.py  test_pricing.py  test_sanitize.py
(+10 files in other folders)
